# bee-game

./: '  Cargo.toml
assets/textures/: bee.xcf  logo.xcf  pipe.xcf  propeller.xcf
src/: bee_game.rs  main.rs  menu.rs
